Fixed font size overflow issue with members board info sections

--- a/css/default.css
+++ b/css/default.css
@@ -662,4 +662,16 @@ nav {
         width: 100%;
         height: 7em;
     }
+
+    .member{
+        height: 13em;
+    }
+
+    .member .mugshot{
+        width: 13em;
+    }
+
+    .member .info{
+        width: 20em;
+    }
 }
